syntax = "proto3";

package auth;

enum Role {
    customer=0;
    admin=1;
    seller=2;
}
service AuthService {
    rpc ValidateToken(ValidateTokenRequest) returns (ValidateTokenResponse);
    rpc RefreshToken(RefreshTokenRequest) returns (RefreshTokenResponse);
    rpc GetUserInfo(UserInfoRequest) returns (UserInfoResponse);
}

message ValidateTokenRequest {
    string token = 1;
}

message ValidateTokenResponse {
    bool isValid = 1;
    int32 userId = 2;
    Role role = 3;
}

message RefreshTokenRequest {
    string refreshToken = 1;
}

message RefreshTokenResponse {
   string accessToken = 1;
   string refreshToken = 2;
}

message UserInfoRequest {
    int32 userId = 1;
}

message UserInfoResponse {
    int32 userId = 1;
    string username = 2;
    string email = 3;
    Role role = 4;
}
